# netaudio-webgui

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-14-gui-expansion-design.md
src/netaudio_webgui/: app.py  auth.py  config.py  fixtures.py  netaudio_client.py  presets.py  zones.py
src/netaudio_webgui/static/: app.js  index.html  style.css
tests/: test_app.py  test_auth.py  test_config.py  test_fixtures.py  test_netaudio_client.py  test_plan_apply.py  test_presets.py  test_smoke.py  test_zones.py
