[project]
name = "netaudio-webgui"
version = "0.1.0"
description = "Web GUI for controlling Dante devices via the netaudio CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netaudio_webgui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
